runtime/schema.peg
/**
 * @license
 * Copyright (c) 2017 Google Inc. All rights reserved.
 * This code may only be used under the BSD style license found at
 * http://polymer.github.io/LICENSE.txt
 * Code distributed by Google as part of this project is also
 * subject to an additional IP rights grant found at
 * http://polymer.github.io/PATENTS.txt
 */

Schema = "schema" _ name:Name _ ext:(Extends?) _ "{" _ sections:Section* _ "}" {
  var result = { name, sections }
    if (ext) {
      result.parent = ext;
    }
    return result;
}

Name = [A-Z][a-zA-Z]* { return text(); }

Extends = "extends" _ name:Name { return name; }

Section = _ sectionType:SectionType _ ":" _ fields:Field* {
  var fieldDict = {}
    for (var field of fields)
      fieldDict[field.name] = field.type;
  return { sectionType, fields: fieldDict }
}

SectionType = "normative" / "optional"

Field = type:Type _ name:FieldName _ ";" _ { return { type, name } }

Type = "Text" / "URL" / "Date"

FieldName = [a-zA-Z]* { return text(); }

_ "whitespace" = [ \t\n\r]*
